force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Automated_Action_Callback__c.field-meta.xml
<CustomField>
    <fullName>copado__Automated_Action_Callback__c</fullName>
    <inlineHelpText>If you want to perform more specific operations, such as updating record statuses or creating new records, after the completion of the automated action, provide a flow or class API name. The class must implement the ‘JobExecutionCallback’ interface.</inlineHelpText>
    <label>Flow or Class API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>