force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Automation_Connector__c.field-meta.xml
<CustomField>
    <fullName>copado__Automation_Connector__c</fullName>
    <inlineHelpText>Select the automation type that will be executed by the Trigger Action field. Choose the “Custom” type only if you want to execute your own custom automation type.</inlineHelpText>
    <label>Automation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>