force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Custom_Automation_Connector__c.field-meta.xml
<CustomField>
    <fullName>copado__Custom_Automation_Connector__c</fullName>
    <inlineHelpText>API name of the Apex class used to map the trigger and automated actions payloads and parameters.</inlineHelpText>
    <label>Custom Automation Type (API Name)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>