force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Excluded_Environments__c.field-meta.xml
<CustomField>
    <fullName>copado__Excluded_Environments__c</fullName>
    <inlineHelpText>List of environments to be excluded when a stage is selected. You can select up to 13 environments.</inlineHelpText>
    <label>Excluded Environments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>