force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Last_Execution_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Execution_Date_Time__c</fullName>
    <label>Last Execution Date Time</label>
    <type>DateTime</type>
</CustomField>