force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Quality_Gate_Rule_Condition__c.field-meta.xml
<CustomField>
    <fullName>copado__Quality_Gate_Rule_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Gate Rule Condition</label>
    <referenceTo>copado__Quality_Gate_Rule_Condition__c</referenceTo>
    <relationshipLabel>Automation Rules</relationshipLabel>
    <relationshipName>Automation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>