force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Scheduled_Job_Id__c</fullName>
    <label>Scheduled Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>