force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Source_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Source_Action_Status__c</fullName>
    <inlineHelpText>Define whether the automation rule should be triggered after a successful or failed (error) execution of the trigger action.</inlineHelpText>
    <label>Trigger Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Successful</fullName>
                <default>true</default>
                <label>Successful</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>