force-app/main/default/objects/copado__Automation_Rule__c/fields/copado__Stage__c.field-meta.xml
<CustomField>
    <fullName>copado__Stage__c</fullName>
    <inlineHelpText>List of stages where the source action will be evaluated. You can select up 13 stages.</inlineHelpText>
    <label>Selected Stages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>