force-app/main/default/objects/copado__Automation_Rule__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Active__c</columns>
    <columns>copado__Pipeline__c</columns>
    <columns>copado__Source_Action__c</columns>
    <columns>copado__Source_Action_Status__c</columns>
    <columns>copado__Automated_Action__c</columns>
    <columns>copado__Execution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>